--- a/test/output/2012-01-20_test2.markdown
+++ b/test/output/2012-01-20_test2.markdown
@@ -1,6 +1,6 @@
 { title: 'test2',
   author: 'tistory2markdown',
-  date: Invalid Date,
+  date: Fri, 20 Jan 2012 07:11:41 GMT,
   link: '/',
   category: [],
   tags: undefined,
@@ -11,5 +11,5 @@
      modified: '1327043501',
      visibility: 'private' } }
 
-test<div class="vimiumHUD" style="right: 150px; opacity: 0; display: none; ">
+test<div class="vimiumHUD" style="right: 150px; opacity: 0\. display: none; ">
 </div>
